<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


<!--    FarmerEats-->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/farmereats"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    Forgot Password-->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forg_pass"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

<!--    rememberPassword-->
    <TextView
        android:id="@+id/rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remem_pass"
        android:textColor="#808080"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/loginFromForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/login"
        android:textColor="#D5715B"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/rememberPassword"
        app:layout_constraintTop_toTopOf="@id/rememberPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonelayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/rememberPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:background="@drawable/rectangle_4"
            android:drawableStart="@drawable/ic_dialer"
            android:inputType="phone"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendOtp"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/send_otp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/phonelayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>