<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpVerification"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_3_of"
        android:layout_width="86dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|top"
        android:text="@string/signup_3_of"
        android:textAppearance="@style/signup_3_of"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName"/>

    <TextView
        android:id="@+id/verification"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:lineHeight="46dp"
        android:gravity="center_horizontal|top"
        android:text="@string/verification"
        android:textAppearance="@style/welcome_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_3_of"/>


    <TextView
        android:id="@+id/attached_pr"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:gravity="top"
        android:text="@string/attached_pr"
        android:textAppearance="@style/attached_pr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification" />


    <TextView
        android:id="@+id/attach_proo"
        android:layout_width="182dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/attach_proo"
        android:textAppearance="@style/attach_proo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attached_pr"
        app:layout_constraintVertical_bias="0.077" />


    <ImageView
        android:id="@+id/dropImage"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="48dp"
        android:background="@drawable/circular_background"
        android:scaleType="centerInside"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/attach_proo"
        app:layout_constraintTop_toBottomOf="@+id/attached_pr"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/continueToHoursPage"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_button"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attached_pr"
        app:layout_constraintVertical_bias="0.939" />

    <View
        android:id="@+id/backToFarmInfo"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="36dp"
        android:layout_height="20dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/continueToHoursPage"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attach_proo"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>