<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <!--    FarmerEats-->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/farmereats"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVerifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/rememeberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remem_pass"
        android:textColor="#808080"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvVerifyOtp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/loginfromverifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/login"
        android:textColor="#D5715B"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/rememeberPass"
        app:layout_constraintTop_toTopOf="@id/rememeberPass" />


    <LinearLayout
        android:id="@+id/otpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rememeberPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rememeberPass"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOtp1"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                android:background="@drawable/otp_rect"
                android:padding="10dp"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOtp2"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                android:background="@drawable/otp_rect"
                android:padding="10dp"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOtp3"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                android:background="@drawable/otp_rect"
                android:padding="10dp"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOtp4"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                android:background="@drawable/otp_rect"
                android:padding="10dp"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOtp5"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                android:background="@drawable/otp_rect"
                android:padding="10dp"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <Button
        android:id="@+id/submitotp"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/otpLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
    android:id="@+id/resendOtp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/resend_code"
    android:textColor="@color/grey"
    android:textSize="12sp"
    app:layout_constraintTop_toBottomOf="@id/submitotp"
    android:layout_marginTop="24dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>