<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".fragments.Login">

    <!-- FarmerEats Title -->

    <!-- Welcome Back -->

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_bac"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <!-- New Here? Create Account -->
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New here? "
        android:textColor="#808080"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create account"
        android:textColor="#D5715B"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tvSignUp"
        app:layout_constraintStart_toEndOf="@id/tvSignUp"/>

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email Address"
            android:background="@drawable/rectangle_4"
            android:drawableLeft="@drawable/ic_at"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:background="@drawable/rectangle_4"
            android:drawableStart="@drawable/ic_pass"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/orange"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@id/passwordInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Or login with -->
    <TextView
        android:id="@+id/tvOrLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <!-- Social Media Icons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvOrLoginWith"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/sign_with_google"
            android:layout_width="96dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_google"
            android:background="@drawable/rectangle_1"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/sign_with_apple"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_apple"
            android:background="@drawable/rectangle_1"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/sign_with_facebook"
            android:layout_width="96dp"
            android:background="@drawable/rectangle_1"
            android:layout_height="48dp"
            android:src="@drawable/ic_facebook"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
